--- a/styles/text.css
+++ b/styles/text.css
@@ -1,6 +1,6 @@
-span{
+span,a{
 	font-family: "Helvectica Neue","Helvectica",sans-serif;
 }
-.welcome-to-codehelper{
+.title-big-50{
 	font-size: 50px;
 }
